fixed color contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -109,6 +109,10 @@ picture img {
     margin-bottom: 10px;
 }
 
+#forecast h3 {
+    color: white;
+}
+
 .forecast-day img {
     width: 50px;
     height: 50px;
